fixed projects tile spacing

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -69,6 +69,7 @@ header a {
 .about-me {
     text-align: center;
     background-color: #949494;
+    padding: 25px;
 }
 .about-me h2 {
     font-size: 70px;
@@ -90,45 +91,49 @@ header a {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
+}
+.my-projects img {
+    width: 500px;
+    height: 300px;
 }
 .project {
     margin: 0;
     color: var(--secondary-color);
     text-shadow: 0 0 5px var(--tertiary-color);
     flex: 1;
-    text-align: center;
+    justify-content: center;
+}
+.project h3 {
+    padding: 15px;
+    font-size: 30px;
 }
 .project img {
     width: 100%;
+    margin: 0;
 }
 .border-blue {
-    border: 3px solid var(--quaternary-color);
+    border: 1px solid var(--quaternary-color);
     box-shadow: 0 0 20px var(--quaternary-color);
 }
+.border-blue:hover {
+    background-color: var(--quaternary-color);
+    opacity: 0.5;
+}
 .border-pink {
-    border: 3px solid var(--tertiary-color);
+    border: 1px solid var(--tertiary-color);
     box-shadow: 0 0 20px var(--tertiary-color);
 }
-/* .run-buddy {
-    background-image: url(../Assets/Images/Run-Buddy\ screenshot.PNG);
-    background-size: 600px 300px;
-    width: 600px;
-    height: 300px;
+.border-pink:hover {
+    opacity: 0.5;
+    background-color: var(--tertiary-color);
 }
-.robot-gladiators {
-    width: 300px;
-    height: 300px;
-}
-.tbd {
-    background-image: url(../Assets/Images/coming-soon-neon-sign.jpg);
-    background-size: 400px 300px;
-    width: 400px;
-    height: 300px;
-} */
+
 .project-text {
-    padding: 25px;
-    line-height: 1.3;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
 }
 .project-text h3 {
     font-size: 28px;
@@ -141,25 +146,16 @@ header a {
 .project-text img {
     width: 100%;
 }
-
-.project-text button {
-    color: var(--primary-color);
+.project-text a:hover {
     background-color: var(--quaternary-color);
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 10px;
 }
-.project-text button:hover {
-    background-color: #2c75ff;
-}
-
 
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
         justify-content: center;
         position: relative;
+        width: auto;
     }
     header img {
         width: 40%;
@@ -181,8 +177,20 @@ header a {
         font-size: 30px;
         text-shadow: none;
     }
-
+    .my-projects {
+        justify-content: center;
+    }
     .project {
         flex: 0 70%;
+    }
+    .project-text {
+        overflow: hidden;
+        height: auto;
+        width: 100%;
+    }
+    .project-text img {
+        max-width: 100%;
+        min-width: none;
+        height: auto;
     }
 }
